# player

./: config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/beidousat/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beidousat/player/: ISBaseBean.java  ISBaseSong.java  ISLocalMedia.java  ISSong.java  ISingingWorker.java  MainActivity.java  OnRecordEndListener.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/beidousat/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libCGEVideo/: build.gradle
libCGEVideo/src/main/: AndroidManifest.xml
libCGEVideo/src/main/java/org/wysaid/camera/: CameraInstance.java
libCGEVideo/src/main/java/org/wysaid/common/: Common.java
libCGEVideo/src/main/java/org/wysaid/nativePort/: CGEFrameRecorder.java  CGEFrameRenderer.java  CGENativeLibrary.java
libCGEVideo/src/main/java/org/wysaid/view/: AccompanyAssistant.java  CameraGLSurfaceView.java  CameraRecordGLSurfaceView.java  ImageGLSurfaceView.java  KaraokeRecordGLSurfaceView.java  MixerQueue.java
libCGEVideo/src/main/jni/: CMakeLists.txt  buildJNI
libCGEVideo/src/main/jni/cge/common/: cgeGlobal.cpp  cgeImageFilter.cpp
libCGEVideo/src/main/jni/cge/filters/: cgeWaterMark.cpp
libCGEVideo/src/main/jni/include/: cgeImageHandler.h
libCGEVideo/src/main/jni/include/filters/: cgeWaterMark.h
libCGEVideo/src/main/jni/interface/: cgeFrameRecorder.cpp  cgeFrameRecorder.h  cgeFrameRecorderWrapper.cpp  cgeFrameRecorderWrapper.h  cgeFrameRenderer.cpp  cgeFrameRenderer.h  cgeFrameRendererWrapper.cpp  cgeFrameRendererWrapper.h  cgeUtilFunctions.cpp  cgeUtilFunctions.h  cgeVideoEncoder.cpp
